cropped ou mspacman and a ghost, fixed the background

--- a/mspacman/mspacman.css
+++ b/mspacman/mspacman.css
@@ -1,3 +1,10 @@
- #background {
- display:none;
-  }
+#background {
+    display:none;
+}
+  
+#bg{
+     margin-left: auto;
+     margin-right: auto;
+     display: block;
+}
+
